--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,9 @@ dist-ssr
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
+.env.production
+.env.test
 
 # IDE
 *.swp
